--- a/src/App.css
+++ b/src/App.css
@@ -268,21 +268,89 @@ a{
 /* ****************************************** FOOTER **************************************************** */
 
 .footer{
-  width: 100vw;
+  width: 100%;
+  height: 250px;
   background-color: #0E0D13;
   padding: 15px;
   color: white;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  /* position: absolute; */
-  /* bottom: 0; */
 }
-.footer svg{
-  padding-top: 5px;
+
+.footer a{
+  text-decoration: none;
 }
+
 .footer .fade{
   opacity: 0.6;
   font-size: 0.9rem;
+}
+
+.footer .top{
+  height: 80%;
+  width: 100%;
+  display: flex;
+}
+
+.footer .top .left{
+  width: 49%;
+  height: 100%;
+  padding: 20px 40px;
+}
+.footer .top .left p{
+  margin-left: 20px;
+}
+
+.footer .title{
+  margin-bottom: 20px;
+}
+
+.footer .title a{
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer .title img{
+  width: 30px !important;
+  height: 30px !important;
+}
+.footer .bottom{
+  height: 19%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.footer .top .line{
+  height: 90%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  width: 0.15%;
+  background-color: white;
+}
+
+.footer .top .right{
+  height: 100%;
+  width: 50%;
+  padding: 30px;
+  padding-left: 70px;
+  display: grid;
+  grid-template-columns: 24% 24% 24% 24%;
+}
+
+.footer .top .right li{
+  margin: 5px;
+}
+
+.horidiv{
+  width: 96%;
+  height: 1%;
+  background-color: white;
+  margin-left: 2%;
+  margin-right: 2%;
 }
